Fix heading font size of page insurance membership on small screen

--- a/src/app/containers/insurance/insurance-membership/insurance-membership.component.scss
+++ b/src/app/containers/insurance/insurance-membership/insurance-membership.component.scss
@@ -34,3 +34,13 @@
     float: right;
   }
 }
+
+@media(max-width: 769px){
+  .persond-ins {
+    .box{
+      .heading{
+        font-size: 20px;
+      }
+    }
+  }
+}
